[add]mail-preview

--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,8 +1,9 @@
 <!--実際にメールフォルダに送られてくる内容-->
 <h2>問い合わせ内容をご確認ください。</h2>
 
-<h3>ユーザー名: <%= @contact.name %></h3>
+<h4>ユーザー名: </h4>
+<p><%= @contact.name %></p>
 
-<h3>お問い合わせ内容: </h3>
+<h4>お問い合わせ内容: </h4>
 
 <p><%= @contact.content %></p>
