[add-fix]todolis-routing

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,8 +1,11 @@
-<div class="row">
-	<div class="col-md-8 offset-md-2">
+<div style="display: flex;">
+  <div style="flex: 1;">
+      <%= image_tag 'image07.jpg', :width => '500', :height => '350', :alt => 'top-image' %>
+  </div>
+  <div style="flex: 1;">
 		<div class="card card-default">
 			<div class="card-head">
-			<h3 class="text-center thead p-3">お問い合わせフォーム</h3>
+			<h3 class="text-center p-3">お問い合わせフォーム</h3>
 			</div>
 
 			<div class="card-body">
