--- a/app/views/manage/boards/index.html.erb
+++ b/app/views/manage/boards/index.html.erb
@@ -20,7 +20,7 @@
 			<thead class="thead">
 				<th>ユーザー</th>
 				<th>タイトル</th>
-				<th>タグ</th>
+				<th>カテゴリー</th>
 				<td>投稿日時</td>
 				<td>詳細</td>
 			</thead>
