--- a/app/views/public/boards/_sidebar.html.erb
+++ b/app/views/public/boards/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="card card-default mt-5 mr-4">
 	<div class="card-heading thead">
-		<h5 class="text-center p-2">掲示板内検索</h5>
+		<h5 class="text-center p-2">カテゴリー別</h5>
 	</div>
 	<table class="table">
 	   <!--タイトルと本文の検索-->
