--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -5,8 +5,7 @@
 			<p class="text-center">学習の悩みなど気軽に投稿してみましょう。</p>
 		</div>
 		<div class="todo-image pl-2">
-			<%= image_tag 'image04.jpg', :width => '350', :height => '300', :alt => 'top-image' %>
-			<%#= image_tag 'image04.jpg', :width => '300', :height => '250', :alt => 'top-image' %>
+			<%= image_tag 'image04.jpg', :width => '350', :height => '300' %>
 		</div>
 	</div>
 </div>
