--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
     <% if user_signed_in? %>
     　<li><%= "ようこそ、#{current_user.name}さん！" %></li>
       <li><%= link_to '  マイページ', public_user_path(current_user.id), class: 'glyphicon glyphicon-log-in' %></li>
-      <li><%= link_to '  Todoリスト　', public_todolists_path, class: 'glyphicon glyphicon-log-in' %></li>
+      <li><%= link_to '  Todoリスト　', public_user_todolists_path(current_user), class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  掲示板一覧', public_boards_path, class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  使い方ガイド', home_about_path, class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-in' %></li>
