--- a/app/views/public/boards/new.html.erb
+++ b/app/views/public/boards/new.html.erb
@@ -1,4 +1,14 @@
-<h2>新規投稿</h2>
+<div class="row">
+	<div class="col-md-11 mt-3">
+		<div class="card card-default">
+			<div class="card-head thead">
+				<h4 class="text-center p-2">新規投稿</h4>
+			</div>
+			<div class="card-body">
+			<!--投稿フォーム-->
+			<%= render 'form', board: @board, obj: @board %>
+			</div>
 
-<!--投稿フォーム-->
-<%= render 'form', board: @board, obj: @board %>
+		</div>
+	</div>
+</div>
