--- a/app/views/public/boards/_form.html.erb
+++ b/app/views/public/boards/_form.html.erb
@@ -14,7 +14,8 @@
 	</div>
 	<div class="form-group">
     <span>タグ</span>
-	    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+    	<!--メソッドを作ること-->
+	    <%= f.collection_check_boxes(:tag_ids, Tag.where(is_void: false), :id, :name) do |tag| %>
 	      <div class="form-check">
 	        <%= tag.label class: 'form-check-label' do %>
 	          <%= tag.check_box class: 'form-check-input' %>
