--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -11,7 +11,9 @@
 			<%= f.fields_for :label_lists do |list| %>
 				<%= list.label :ラベル, class: 'label_id' %>
 				<%#= list.label :label_id %>
-				<%= list.collection_select :label_id, Label.all, :id, :name, {}, class: 'form-control-sm' %>
+				<!--ステータス有効のもののみ選択させたい-->
+				<%#= list.collection_select :label_id, Label.all, :id, :name, {}, class: 'form-control-sm' %>
+				<%= list.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
 			<% end %>
 		</div>
 		<div class="form-group">
