--- a/app/views/public/boards/_sidebar.html.erb
+++ b/app/views/public/boards/_sidebar.html.erb
@@ -5,12 +5,12 @@
 	<table class="table">
 	   <!--タイトルと本文の検索-->
 	   <!--orでつなげることで複数のカラムが検索できる-->
-	   <%= search_form_for(search, url: public_boards_path, html: {class: 'form-inline'}) do |f| %>
+	   <%#= search_form_for(boards, url:public_boards_path) do |f| %>
 	   	<%#= f.label :title_or_body_cont, '検索はこちら' %>
-	   <p><%= f.search_field :title_or_body_cont, class: 'searchform', placeholder: '検索はこちら' %>
+	   <p><%#= f.search_field :title_or_body_cont, class: 'searchform', placeholder: '検索はこちら' %>
 	   </p>
-			<i class="fas fa-search"><%= f.submit %></i>
-		<% end %>
+			<i class="fas fa-search"><%#= f.submit %></i>
+		<%# end %>
 		<tbody>
 		<tr>
 			<td>
