--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -13,7 +13,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<!--掲示板サイドバー-->
-		<%= render 'public/boards/sidebar', search: @search, tags: @tags %>
+		<%= render 'public/boards/sidebar', boards: @boards, tags: @tags %>
 	</div>
 
 	<div class="col-md-9">
