--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -39,8 +39,8 @@
 			</td>
 		</tr>
 		<tr>
-			<td>
 		<% if user_signed_in? %>
+			<td>
 			<!--フォロー、フォロワーの数が０だった場合、リンク先に飛べないように設定-->
 			<% if user.followings.count != 0 %>
 				  フォローリスト<span class="badge badge-info"><%= link_to user.followings.count, follows_public_user_path %></span>
@@ -70,13 +70,15 @@
 		</tr>
 		<%#end %>
 		<tr>
+			<% if user == current_user %>
 			<th class="col-3">
-			<%= link_to edit_public_user_path(user), class: 'btn btn-outline-success btn-block' do %>
-				<span>設定
-					<i class="fas fa-cogs"></i>
-				</span>
-			<% end %>
+				<%= link_to edit_public_user_path(user), class: 'btn btn-outline-success btn-block' do %>
+					<span>設定
+						<i class="fas fa-cogs"></i>
+					</span>
+				<% end %>
 			</th>
+			<% end %>
 		</tr>
 		<% end %>
 	</tbody>
