--- a/app/views/manage/boards/index.html.erb
+++ b/app/views/manage/boards/index.html.erb
@@ -6,7 +6,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<!--掲示板サイドバー-->
-		<%= render 'public/boards/sidebar', search: @search, tags: @tags %>
+		<%= render 'manage/boards/sidebar', search: @search, tags: @tags %>
 	</div>
 
 	<div class="col-md-9 mt-4">
@@ -18,16 +18,15 @@
 
 		<table class="table table-hover">
 			<thead class="thead">
-				<th>ユーザー</th>
 				<th>タイトル</th>
 				<th>カテゴリー</th>
 				<td>投稿日時</td>
-				<td>詳細</td>
+				<th>名前</th>
+				<td>詳細内容</td>
 			</thead>
 			<tbody>
 			<% @boards.each do |board| %>
 				<tr>
-					<td><%= link_to board.user.name, public_user_path(board.user) %></td>
 					<td>
 						<%= board.title %>
 					</td>
@@ -39,15 +38,16 @@
 						<% end %>
 					</td>
 					<td class="small"><%= l board.created_at %></td>
+					<td class="small"><%= link_to board.user.name, public_user_path(board.user) %></td>
 					<td><%= link_to '詳細', manage_board_path(board), class: 'btn btn-outline-info' %></td>
 				</tr>
 			<% end %>
 			</tbody>
 		</table>
 	</div>
-<div class="mx-auto mt-4">
-<%= paginate @boards %>
-</div>
+	<div class="mx-auto mt-4">
+	<%= paginate @boards %>
+	</div>
 
 </div>
 
