--- a/app/views/manage/users/index.html.erb
+++ b/app/views/manage/users/index.html.erb
@@ -1,4 +1,10 @@
 <div class="row">
+	<div class="mx-auto">
+		<h2 class="text mr-5">会員一覧</h2>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-md-3">
 		<h4>会員検索</h4>
 
