--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-8 offset-1">
 		<div class="float-right">
-			<%= link_to '戻る', manage_users_path, class: 'btn btn-secondary' %>
+			<%= link_to '戻る', manage_users_path, class: 'btn btn-outline-secondary' %>
 		</div>
 
 		<table class="table table-bordered table-hover">
@@ -16,7 +16,6 @@
 					<th class="table-secondary">ユーザー名</th>
 					<td><%= @user.name %></td>
 				</tr>
-
 				<tr>
 					<th class="table-secondary">登録ID</th>
 					<td><%= @user.id %></td>
