--- a/app/views/public/boards/_form.html.erb
+++ b/app/views/public/boards/_form.html.erb
@@ -7,14 +7,13 @@
 	</div>
 	<div class="form-group mt-5">
 		<%= f.label :本文 %>
-		<%= f.text_area :body, class: 'form-control', rows: 12 %>
+		<%= f.text_area :body, class: 'form-control', rows: 16 %>
 	</div>
 	<div class="form-group">
 		<%= f.attachment_field :image, placeholder: 'プロフィール画像', class: 'board-image-form' %>
 	</div>
 	<div class="form-group">
     <span>タグ</span>
-    	<!--メソッドを作ること-->
 	    <%= f.collection_check_boxes(:tag_ids, Tag.where(is_void: false), :id, :name) do |tag| %>
 	      <div class="form-check">
 	        <%= tag.label class: 'form-check-label' do %>
@@ -27,7 +26,7 @@
 	<div class="actions">
 		<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %>
 	</div>
-
+	<%= link_to '戻る', public_boards_path, class: 'btn btn-outline-secondary' %>
 <% end %>
 </div>
 
