--- a/app/views/public/boards/edit.html.erb
+++ b/app/views/public/boards/edit.html.erb
@@ -1,4 +1,15 @@
-<h2>編集フォーム</h2>
-<%= render 'form', board: @board, obj: @board %>
+<div class="row">
+	<div class="col-md-11 mt-3">
+		<div class="card card-default">
+			<div class="card-head thead">
+				<h4 class="text-center p-2">編集フォーム</h4>
+			</div>
+			<div class="card-body">
+			<%= render 'form', board: @board, obj: @board %>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 
