--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -11,7 +11,11 @@
 			<th><%= attachment_image_tag user, :profile_image, :fill, 200, 200, size: '50x50', fallback: 'no_image.jpg' %></th>
 		</tr>
 		<tr>
+		<% if admin_signed_in? %>
+			<td>名前:  <%= link_to user.name, manage_user_path(user) %></td>
+		<% else %>
 			<td>名前:  <%= user.name %></td>
+		<% end %>
 		</tr>
 		<tr>
 			<td>自己紹介: <%= user.introduction %></td>
@@ -48,7 +52,6 @@
 				  フォローリスト<span class="badge badge-dark"><%= user.followings.count %></span>
 			<% end %>
 			</td>
-
 		</tr>
 		<tr>
 			<td>
