--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -11,7 +11,6 @@
 
       <div class="form-horizontal">
       <%= form_with model: [:public, @user], local: true do |f| %>
-        <%#= form_with(model: @user, url: public_user_path, local: true) do |f| %>
         <%= render 'shared/error_messages', obj: @user %>
 
         <div class="form-group">
@@ -37,6 +36,7 @@
 
         <div class="form-group">
           パスワード変更設定<hr />
+          <%= link_to "パスワード変更", public_user_users_password_path(@user), class: "btn btn-outline-dark" %>
         </div>
 
         <div class="actions">
