--- a/app/views/public/board_comments/edit.html.erb
+++ b/app/views/public/board_comments/edit.html.erb
@@ -1,33 +1,28 @@
-<h3>編集画面</h3>
+<div class="row">
+	<div class="col-md-10 mt-2 ml-4">
+		<div class="card card-default">
+			<div class="card-head thead">
+				<h4 class="text-center p-2">コメント編集</h4>
+			</div>
+			<div class="card-body">
+			<%#= render 'board_comments/form', board_comment: @board_comment, obj: @board %>
+			<%= form_with model: [:public, @board_comment],url: public_board_board_comment_path, local: true do |f| %>
 
-<div class="text-right">
-  <p><%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %></p>
-</div>
-
-<div class="form-set">
-	<div class="label-name">
-		<label class="label">ユーザー名</label>
-		<%= @board_comment.user.name %>
-		<%#= f.text_field :title, class: 'form-control' %>
+				<%= render 'shared/error_messages', obj: @board_comment %>
+				<div class="form-group">
+				</div>
+				<div class="form-group">
+					<%= f.label :コメント %>
+					<%= f.text_area :comment, class: 'form-control', rows: 7 %>
+				</div>
+				<div class="actions">
+					<!--ボタンサイズ調整-->
+					<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %><hr />
+				</div>
+					<%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %>
+			<% end %>
+			</div>
+		</div>
 	</div>
-	<%= form_with model: [:public, @board_comment],url: public_board_board_comment_path, local: true do |f| %>
-
-		<%= render 'shared/error_messages', obj: @board_comment %>
-
-
-		<div class="form-group">
-			<%= f.label :コメント %>
-			<%= f.text_area :comment, class: 'form-control', rows: 6 %>
-		</div>
-
-		<div class="actions">
-			<!--ボタンサイズ調整-->
-			<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %><hr />
-			<%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %>
-		</div>
-	<% end %>
-
 </div>
 
-<!--boards/showhtml.erbと同様、ネストが深すぎるためなのか、パーシャルがうまく使えない-->
-<%#= render 'form', board_comment: @board_comment, new_comment: @new_comment, obj: @board_comment %>
