--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,16 +1,17 @@
 <!--フォローボタン-->
 <% if user != current_user %>
 	<% if user.followed_by?(current_user) %>
-		<th>フォロー済:
+		<th>
+			フォロー済:
 			<%= link_to public_user_relationship_path(user.id), method: :delete, remote: true do %>
-			  <i class="far fa-thumbs-up fa-lg"><%= user.followers.count %></i>
+			  <i class="fas fa-biking fa-lg">  <%= user.followers.count %></i>
 			<% end %>
 		</th>
 	<% else %>
 		<th>
 			フォローする:
 			<%= link_to public_user_relationships_path(user.id), method: :post, remote: true do %>
-		  	  <i class="far fa-thumbs-up fa-lg"><%= user.followings.count %></i>
+		  	  <i class="fas fa-biking fa-lg">  <%= user.followings.count %></i>
 		  	<% end %>
 		</th>
 	<% end %>
