--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -16,7 +16,6 @@
 		<!--プロフィール-->
 		<%= render 'public/users/profile', user: @user %>
 		</div>
-
 		<div class="card">
 			<div class="card-heading thead">
 		  		<h5 class="text-center p-2">今週のTo doリスト</h5>
@@ -25,7 +24,6 @@
 		  		<%= render 'public/todolists/index', todolists: @week_todolists %>
 		  	</div>
 		</div>
-
 		<div class="card">
 			<div class="card-heading thead">
 				<h5 class="text-center p-2">今月のTo doリスト</h5>
@@ -34,9 +32,7 @@
 				<%= render 'public/todolists/index', todolists: @month_todolists %>
 			</div>
 		</div>
-
 	</div>
-
 	<!--todolist完了で受け取った値をグラフで表示する-->
 	<div class="col-md-8">
 		<div class="card card-default mr-2">
@@ -45,33 +41,24 @@
 			</div>
 	    	<div class="card-body mb-5">
 				<div class="card-text">
-					<p>達成したTo doリストのラベル比率</p>
+					<h5 class="text-center">達成したTo doリストのラベル比率</h5>
 				</div>
-				<%= pie_chart @user.get_labels, label: 'ラベル', name: 'ラベル比率' %>
-	          	<%#= column_chart @user.get_labels, messages: {empty: "No data"}, stacked: true %>
+				<%= pie_chart @user.get_labels,
+					label: 'ラベル', name: 'ラベル比率',
+					colors: ["#f3981d","#fcc800","#fff352","#d1de4c", "#a4d5bd", "#dbebc4"],
+					legend: "bottom",
+					messages: {empty: "No data"}, stacked: true %>
+	          	<%#= pie_chart @user.get_labels, messages: {empty: "No data"}, stacked: true %>
 		 	</div>
 			<div class="card-body mt-5">
 				<div class="card-text">
-					<p>1日ごとのタスク達成数</p>
+					<h5 class="text-center">1週間分のタスク達成度</h5>
 				</div>
-				<%= line_chart @user.week_list %>
+				<%= area_chart @user.week_list,
+				 	colors: ["#20b2aa"],
+				 	xtitle: "1日ごとのタスク達成数", ytitle: "達成数",
+				 	messages: {empty: "No data"}, stacked: true %>
 			</div>
 	     </div>
 	</div>
 </div>
-
-
-
-<%#= column_chart [
-       {name: "Accepted", data: @number_charges_accepted },
-       {name: "Declined", data: @number_charges_declined }
-       ],
-       stacked: true,
-       xtitle: "Date",
-       ytitle: "Transactions",
-       # Additions I've tried:
-       library: {
-       format: 'MM/YY'
-       },
-       discrete: true
-%>
