--- a/app/views/manage/tags/_sidebar.html.erb
+++ b/app/views/manage/tags/_sidebar.html.erb
@@ -2,7 +2,7 @@
 	<div class="card-heading thead">
 		<h5 class="text-center p-2">タグ件数</h5>
 	</div>
-	<table class="table">
+	<table class="table table-hover">
 		<tbody>
 		<tr>
 			<td>
