[add]follow-index

--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -37,7 +37,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td>お気に入り投稿数: <span class="badge badge-info">
+			<td>お気に入り記事: <span class="badge badge-info">
 				<%= user.board_likes.count %></span>
 			</td>
 		</tr>
