--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -5,6 +5,7 @@
 				<th>タイトル</th>
 				<th>カテゴリー</th>
 				<td>投稿日時</td>
+				<td>気になる</td>
 				<td>詳細</td>
 			</tr>
 		</thead>
@@ -25,7 +26,7 @@
 				<td>
 				<% if user_signed_in? %>
 	  				<% if board.board_liked_by?(current_user) %>
-						いいね<%= board.board_likes.count %>
+					　　<i class="far fa-surprise"><%= board.board_likes.count %></i>
 					<% end %>
 				<% end %>
 				</td>
