--- a/app/views/manage/boards/show.html.erb
+++ b/app/views/manage/boards/show.html.erb
@@ -18,14 +18,7 @@
         <span class="badge badge-info"><%= tag.name %></span>
       <% end %>
     </div>
-      <div class="text-right">
-        <!--掲示板お気に入りボタンAjax化---------------------------->
-         <div id="likes_buttons_<%= @board.id %>">
-           <%= render partial: 'public/board_likes/like', locals: { board: @board} %>
-         </div>
-        <!--掲示板お気に入りボタン---------------------------->
 
-      </div>
   </div>
   <div class="board-body">
       <p class="board-text"><%= simple_format(@board.body) %></p>
@@ -61,7 +54,7 @@
                 <% end %>
             </span>
 
-            <%= link_to '削除', manage_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+            <%#= link_to '削除', manage_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
 
             <!--コメントに対するいいねボタン Ajax化-->
             <div id="comment_likes_buttons_<%= comment.id %>">
