--- a/app/views/manage/home/top.html.erb
+++ b/app/views/manage/home/top.html.erb
@@ -4,9 +4,9 @@
   </div>
 
   <div style="flex: 2;">
-    <h3 class="text-center">管理者ページ <i class="fas fa-tools"></i></h3>
+    <h3 class="text-center">管理者トップページ <i class="fas fa-tools"></i></h3>
 
-    <div class="card card-default mt-5 mr-4">
+    <div class="card card-default mt-4 mr-4">
 		<div class="card-heading thead">
 			<h5 class="text-center p-2">各種設定</h5>
 		</div>
