--- a/app/views/manage/labels/index.html.erb
+++ b/app/views/manage/labels/index.html.erb
@@ -9,11 +9,11 @@
 		<!--サイドバー-->
 		<%= render 'manage/labels/sidebar', labels: @labels %>
 	</div>
-	<div class="col-md-9 mt-4">
+	<div class="col-md-9 mt-3">
 		<div class="text-right">
 
 			<div class="tag-form">
-				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+				<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#exampleModal">
 					ラベル新規作成 +
 				</button>
 				<%= render 'form', label: @label, obj: @label %>
