--- a/app/views/manage/tags/index.html.erb
+++ b/app/views/manage/tags/index.html.erb
@@ -8,10 +8,10 @@
 		<!--サイドバー-->
 		<%= render 'sidebar', tags: @tags, obj: @tag %>
 	</div>
-	<div class="col-md-9 mt-4">
+	<div class="col-md-9 mt-3">
 		<div class="text-right">
 			<div class="tag-form">
-				<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal">
+				<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#exampleModal">
 					タグ新規作成 +
 				</button>
 				<%= render 'form', tag: @tag, obj: @tag %>
