--- a/app/views/manage/home/top.html.erb
+++ b/app/views/manage/home/top.html.erb
@@ -16,7 +16,7 @@
 				<%= link_to manage_users_path do %>
 					<span>会員一覧</span><br />
 				<% end %>
-				<span>(  -会員詳細  -会員編集  -会員ステータスの変更  ユーザーページ)</span>
+				<span>(  会員詳細 / 会員編集 / 会員ステータスの変更 / ユーザーページ確認 )</span>
 				</td>
 			</tr>
 			<tr>
@@ -24,7 +24,7 @@
 				<%= link_to manage_boards_path do %>
 					<span>掲示板一覧</span><br />
 				<% end %>
-				<span>(  -掲示板詳細  -掲示板削除  -コメント一覧)</span>
+				<span>(  掲示板詳細 / 掲示板削除 / コメント一覧 / コメント削除)</span>
 				</td>
 			</tr>
 			<tr>
@@ -32,7 +32,7 @@
 				<%= link_to manage_tags_path do %>
 					<span>タグ一覧</span><br />
 				<% end %>
-				<span>(  -タグ詳細  -タグ編集  -ステータスの変更)</span>
+				<span>(  タグ詳細 / タグ編集 / ステータスの変更 / タグ検索)</span>
 				</td>
 			</tr>
 			<tr>
@@ -40,7 +40,7 @@
 				<%= link_to manage_tags_path do %>
 					<span>ラベル一覧</span><br />
 				<% end %>
-				<span>(  -ラベル詳細  -ラベル編集  -ステータスの変更)</span>
+				<span>( ラベル詳細 / ラベル編集 / ステータスの変更 / ラベル検索)</span>
 				</td>
 			</tr>
 		</table>
