--- a/app/views/manage/labels/_sidebar.html.erb
+++ b/app/views/manage/labels/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="card card-default mt-5 mr-4">
 	<div class="card-heading thead">
-		<h5 class="text-center p-2">ラベル件数</h5>
+		<h5 class="text-center p-2">ラベル検索</h5>
 	</div>
 	<table class="table">
 		<tbody>
