[add]kantan-login

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -9,9 +9,9 @@ body {
 .wf-hannari { font-family: "Hannari"; }
 
 #logo {
-	font-family: 'Nothing You Could Do', cursive;
+	font-family: 'Ruda', sans-serif;
 	text-decoration: none;
-  	color: #4b4b4b;
+  	color: rgb(33, 150, 243);
 }
 
 
