--- a/app/views/public/users/edit_password.html.erb
+++ b/app/views/public/users/edit_password.html.erb
@@ -1,6 +1,6 @@
 <div class="card col-sm-6 mt-5 mx-auto px-0">
-  <div class="card-header">
-    <h3>パスワードを変更する</h3>
+  <div class="card-head thead">
+    <h3 class="text-center p-2">パスワードを変更する</h3>
   </div>
   <div class="card-body">
     <%= form_with(model: @user, url: public_user_users_password_path(@pass_user), method: :put, local: true) do |f| %>
