--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -55,7 +55,7 @@
 					<h5 class="text-center">1週間分のタスク達成度</h5>
 				</div>
 				<%= area_chart @user.week_list,
-				 	colors: ["#20b2aa"],
+				 	colors: ["#0096f3"],
 				 	xtitle: "1日ごとのタスク達成数", ytitle: "達成数",
 				 	messages: {empty: "No data"}, stacked: true %>
 			</div>
