--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,9 +15,9 @@
       <li><%= link_to '  ログアウト', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-in' %></li>
 
     <% else %>
-      <li><%= link_to '  トップページ', root_path, class: 'glyphicon glyphicon-log-in' %></li>
-      <li><%= link_to '  新規登録', new_user_registration_path, class: 'glyphicon glyphicon-log-in' %></li>
+      <li><%= link_to '  ホーム', root_path, class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  ログイン', new_user_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+      <li><%= link_to '  新規登録', new_user_registration_path, class: 'glyphicon glyphicon-log-in' %></li>
       <li><%= link_to '  ログイン(管理者)', new_admin_session_path, class: 'glyphicon glyphicon-log-in' %></li>
 
   　<% end %>
