--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -8,7 +8,6 @@
     <h3><i class="fas fa-user-graduate"></i>
         新規登録
     </h3>
-
       <div class="form-horizontal">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
@@ -36,12 +35,13 @@
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
         </div>
         <div class="actions">
-          <%= f.submit "登録", class: 'btn btn-outline-info form-control' %>
+          <%= f.submit "登録", class: 'btn btn-info form-control' %><hr />
+          <%= link_to 'ゲスト(かんたんログイン）', users_guest_sign_in_path, method: :post, class: 'btn btn-warning btn-block' %><hr />
+          <%= link_to '管理者(かんたんログイン）', admins_guest_sign_in_path, method: :post, method: :post, class: 'btn btn-warning btn-block' %>
         </div>
       <% end %>
-      <%= render "users/shared/links" %>
+      <%#= render "users/shared/links" %>
       </div>
   </div>
 </div>
 
-<%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
