--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -18,8 +18,9 @@
 				<h5 class="text-center p-2">To doリスト作成</h5>
 			</div>
 	  		<div class="card-body">
-				<p class="card-text"></p>
-				<%= render 'public/todolists/form', todolist: @todolist, obj: @todolist %>
+				<div id="todolist_form">
+					<%= render 'public/todolists/form', todolist: @todolist, label: @label %>
+				</div>
 			</div>
 		</div>
 		<%= link_to 'マイプロフィールへ戻る', public_user_path(current_user.id), class: 'btn btn-outline-success' %>
@@ -45,7 +46,9 @@
 						<h5 class="text-center p-2">本日のTo do リスト</h5>
 					</div>
 					<div class="card-body">
-						<%= render 'public/todolists/tab', todolists: @today_todolists %>
+						<div id="todolist_area">
+							<%= render 'public/todolists/tab', todolists: @today_todolists %>
+						</div>
 					</div>
 				</div>
 			</div>
