--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</div>
-		<%= link_to 'マイプロフィールへ戻る', public_user_path(current_user.id), class: 'btn btn-outline-success' %>
+		<%= link_to 'マイプロフィールへ戻る', user_path(current_user.id), class: 'btn btn-outline-success' %>
 	</div>
 
 	<div class="col-md-7">
@@ -60,7 +60,9 @@
 						<h5 class="text-center p-2">今週のリスト</h5>
 					</div>
 					<div class="card-body">
-						<%= render 'public/todolists/tab', todolists: @week_todolists %>
+						<div id="todolist_area_week">
+							<%= render 'public/todolists/tab', todolists: @week_todolists %>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -71,7 +73,9 @@
 						<h5 class="text-center p-2">今月のリスト</h5>
 					</div>
 					<div class="card-body">
-						<%= render 'public/todolists/tab', todolists: @month_todolists %>
+						<div id="todolist_area_month">
+							<%= render 'public/todolists/tab', todolists: @month_todolists %>
+						</div>
 					</div>
 				</div>
 			</div>
