--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -1,18 +1,35 @@
 <div class="form-horizontal">
 <!--controller.action_name == 'index'-->
-	<%= form_with model: [:public, todolist], url:  public_user_todolists_path, remote: true do |f| %>
+	<%= form_with model: todolist, remote: true do |f| %>
 		<%= render 'shared/error_messages', obj: todolist %>
 		<div class="form-group">
 			<%= f.label :内容 %>
 			<%= f.text_field :content, class: 'form__text form-control' %>
 		</div>
+		<!--編集ページの時は表示しない-->
+		<% if controller.action_name != 'edit' %>
 		<div class="form-group">
-			<!--属性追加-->
 			<%= f.fields_for :label_lists do |list| %>
 				<%= list.label :選択, class: 'label_id' %>
 				<%= list.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
 			<% end %>
 		</div>
+		<% end %>
+
+		<!--編集ページの時のみ表示する-->
+	    <% if controller.action_name == 'edit' %>
+		<div class="form-group">
+	        <!--属性追加-->
+	        <%= f.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
+	    </div>
+	    <div class="form-group">
+	        <%#= f.radio_button :done, { value: false } %>
+	        <%= f.label :ステータス %>
+	        <%= f.radio_button :done, :false, {value: "false", style: 'display: inline-block;'} %>未完
+	        <%= f.radio_button :done, :true, {value: "true", style: 'display: inline-block'} %>完了
+	    </div>
+	    <% end %>
+
 		<div class="form-group">
 			<%= f.radio_button :time_category, :today, {value: "today", style: 'display: inline-block;'} %>
 			<%= f.label :time_category_today, "本日", class: 'time_category' %>
@@ -25,7 +42,6 @@
 		</div>
 		<div class="action">
 			<%= f.submit '保存する', class: 'btn btn-outline-info' %>
-			<%= f.submit "clear", type: :reset %>
 		</div>
 	 <% end %>
 </div>
